assets/css/default.css
@font-face {
    font-family: 'montserratregular';
    src: url('/assets/fonts/montserrat-regular-webfont.eot');
    src: url('/assets/fonts/montserrat-regular-webfont.eot?#iefix') format('embedded-opentype'),
         url('/assets/fonts/montserrat-regular-webfont.woff2') format('woff2'),
         url('/assets/fonts/montserrat-regular-webfont.woff') format('woff'),
         url('/assets/fonts/montserrat-regular-webfont.ttf') format('truetype'),
         url('/assets/fonts/montserrat-regular-webfont.svg#montserratregular') format('svg');
    font-weight: normal;
    font-style: normal;

}

pre {
  background-color:none;
  padding:0px;
}

body {
    font-family: helvetica, arial, sans-serif;
}


h1,h2,h3,h4,h5 {
  font-family: "montserratregular"
}
a { 
color:#4078c0;
}
p,
label,
span,
h1 a,
h2 a,
h3 a,
h4 a,
h5 a {
   transition: all 0.5s ease;
    color:#333;
}

a:hover {
  color:#4078c0;
  text-decoration: none;
}
.no-margin {
  margin:0px;
}
.no-margin-left {
  margin-left:0px;
}
.no-margin-right {
  margin-left:0px;
}

.no-padding {
  padding:0px;
}
.no-padding-left {
  padding-left:0px;
}
.no-padding-right {
  padding-left:0px;
}
ul.menu li a i {
  padding:5px 5px 2px 0px;
}
ul.menu li a {
  color:#2E5586;
  text-decoration: none;
}
ul.menu li a:hover {
  color:#4078c0;
  text-decoration: none;
}
ul.menu li:hover {
  border-right:3px solid #428bca;
  transition:all 0.1s ease;
}
.logo img {
  width:150px; 
  height:150px;
  padding:5px;
  border-radius: 50%;
}
.menu li a{
  font-size:13px;
  font-weight:300;
}
.cover-border {
  border-bottom:1px solid #BDBDBD;
  width:100%; 
  height:800px;
}
.cover {
  background-size:cover !important;
}
.blog-description h1, #siteName {
  font-size:2em;
  font-weight:300;
  line-height: 32px;
}
.blog-description p {
    opacity: .6;
}
.blog-description .divider {
  border-bottom: 5px solid rgba(64, 120, 192, 0.11);
}
.summary h2 {
    margin-bottom: .15em;
}
.summary header a {
  font-size:.8em;
  margin-bottom: 0;
}
.summary .description p{
  font-size:1.1em;
  color:#767676;
  font-weight:300;
}
i.read-more{
  font-size:10px;
  margin-left:5px;
  margin-right:5px;
}
a.read-more{
  padding:5px;
}
.container {
  margin-top:40px;
  margin-bottom: 20px;
}
.subhead {
  font-weight:300;
  font-size: 1em;
  margin-bottom:.25em;
  opacity: .6;
}
.footer-icon {
  color:#8CC665; 
  font-size:10px; 
  padding:10px
}
.post-image {
  width:90%;
  height:90%;
  line-height:5;
}
.excerpt {
    color: black;
}
.excerpt:hover {
    color: black;
}
#post-content {
    font-size: 1em;
}
img {
    width: 100%;
}
article {
    margin: 0;
}

pre code span{
	color: #666;
}

.hljs-preprocessor {
    color: #75715e;
}

